--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,6 +14,21 @@
   -webkit-text-size-adjust: 100%;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -25,15 +40,19 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+ 
+
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+ol, ul {
+  list-style: none;
 }
 
 button {
